versioned_docs/version-0.22.0/api/mobile/index.md
# @fishjam-cloud/react-native-client

## Connection

- [useConnection](functions/useConnection.md)
- [usePeers](functions/usePeers.md)
- [useScreenShare](functions/useScreenShare.md)
- [useUpdatePeerMetadata](functions/useUpdatePeerMetadata.md)
- [useAppScreenShare](variables/useAppScreenShare.md)
- [useCallKit](variables/useCallKit.md)
- [useCallKitEvent](variables/useCallKitEvent.md)
- [useCallKitService](variables/useCallKitService.md)
- [useForegroundService](variables/useForegroundService.md)

## Devices

- [useAudioSettings](functions/useAudioSettings.md)
- [useCamera](functions/useCamera.md)
- [useMicrophone](functions/useMicrophone.md)

## Components

- [FishjamRoom](functions/FishjamRoom.md)
- [VideoPreviewView](variables/VideoPreviewView.md)
- [VideoRendererView](variables/VideoRendererView.md)

## Other

- [setOverwriteDebugConfig](functions/setOverwriteDebugConfig.md)
- [useSandbox](functions/useSandbox.md)
- [AppScreenShareData](type-aliases/AppScreenShareData.md)
- [AudioOutputDevice](type-aliases/AudioOutputDevice.md)
- [AudioOutputDeviceType](type-aliases/AudioOutputDeviceType.md)
- [AudioSessionMode](type-aliases/AudioSessionMode.md)
- [AudioTrack](type-aliases/AudioTrack.md)
- [Brand](type-aliases/Brand.md)
- [CallKitAction](type-aliases/CallKitAction.md)
- [CallKitConfig](type-aliases/CallKitConfig.md)
- [Camera](type-aliases/Camera.md)
- [CameraConfig](type-aliases/CameraConfig.md)
- [CameraConfigBase](type-aliases/CameraConfigBase.md)
- [CameraFacingDirection](type-aliases/CameraFacingDirection.md)
- [CameraId](type-aliases/CameraId.md)
- [ConnectionConfig](type-aliases/ConnectionConfig.md)
- [DebugConfig](type-aliases/DebugConfig.md)
- [DistinguishedTracks](type-aliases/DistinguishedTracks.md)
- [EncodingReason](type-aliases/EncodingReason.md)
- [FishjamRoomProps](type-aliases/FishjamRoomProps.md)
- [ForegroundServiceConfig](type-aliases/ForegroundServiceConfig.md)
- [GenericMetadata](type-aliases/GenericMetadata.md)
- [JoinRoomConfig](type-aliases/JoinRoomConfig.md)
- [Peer](type-aliases/Peer.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerStatus](type-aliases/PeerStatus.md)
- [PeerTrackMetadata](type-aliases/PeerTrackMetadata.md)
- [PeerWithTracks](type-aliases/PeerWithTracks.md)
- [ReconnectionStatus](type-aliases/ReconnectionStatus.md)
- [RoomType](type-aliases/RoomType.md)
- [ScreenShareOptions](type-aliases/ScreenShareOptions.md)
- [ScreenShareQuality](type-aliases/ScreenShareQuality.md)
- [SimulcastConfig](type-aliases/SimulcastConfig.md)
- [Track](type-aliases/Track.md)
- [TrackBase](type-aliases/TrackBase.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMetadata](type-aliases/TrackMetadata.md)
- [TrackType](type-aliases/TrackType.md)
- [UseCallKitResult](type-aliases/UseCallKitResult.md)
- [UsePeersResult](type-aliases/UsePeersResult.md)
- [UseSandboxProps](type-aliases/UseSandboxProps.md)
- [VadStatus](type-aliases/VadStatus.md)
- [VideoLayout](type-aliases/VideoLayout.md)
- [VideoPreviewViewProps](type-aliases/VideoPreviewViewProps.md)
- [VideoQuality](type-aliases/VideoQuality.md)
- [VideoRendererProps](type-aliases/VideoRendererProps.md)
- [VideoTrack](type-aliases/VideoTrack.md)
- [useCameraPermissions](variables/useCameraPermissions.md)
- [useMicrophonePermissions](variables/useMicrophonePermissions.md)

## Debugging

- [useBandwidthEstimation](functions/useBandwidthEstimation.md)
